# railmap

./: .gitignore  Cargo.toml  README.md  config.yml  shell.nix  template.html
gpx/ec/: cph-hh.gpx  ec8.gpx  ece-zürich-münchen.gpx  innsbruck-münchen.gpx  zürich-milan.gpx
gpx/ferry/: gedser-rostock.gpx  harwich-holland.gpx  rotterdam-watertaxi.gpx  rødby-puttgarden.gpx
gpx/ic/: aarhus.gpx  almere-rotterdam.gpx  bern-geneve.gpx  bramming-fredericia.gpx  braunschweig-hannover.gpx  edinburgh-warrington.gpx  flensburg.gpx  fredericia-middelfart.gpx  geneva-lausanne.gpx  interlaken-ost-to-bern.gpx  karlsruhe-leipzig.gpx  nlw-york.gpx  over-roskilde.gpx  singen-stuttgart.gpx  sønderborg.gpx  visp-bern.gpx  york-edinburgh.gpx  zürich-bern.gpx  zürich-lausanne.gpx  zürich-sargans.gpx  zürich-weinfelden.gpx
gpx/ice/: basel-sbb-zürich-hb.gpx  berlin-leipzig-alt.gpx  berlin-leipzig.gpx  berlin-mannheim-alt.gpx  darmstadt-mannheim.gpx  düsseldorf-arnhem.gpx  erfurt-nürnberg.gpx  frankfurt-karlsruhe-alt.gpx  hamburg-würzburg.gpx  hh-b.gpx  hh-hannover-2.gpx  hh-hannover.gpx  kassel-stuttgart.gpx  köln-brussels.gpx  köln-dortmund.gpx  köln-frankfurt.gpx  leipzig-frankfurt.gpx  munich-düsseldorf.gpx  munich-würzburg.gpx  stendal-uelzen.gpx  wuppertal-hannover.gpx  würzburg-aschaffenburg.gpx
gpx/ir/: luzern.gpx
gpx/metro/: copenhagen-m1.gpx  copenhagen-m2.gpx  copenhagen-m3.gpx  copenhagen-m4.gpx
gpx/rb/: amsterdam-business.gpx  cph-elsinore.gpx  cph-malmö.gpx  neg1.gpx  (+5 more)
src/: config.rs  data.rs  gpx_reader.rs  http.rs  main.rs  polyline.rs  status.rs  traewelling.rs
(+29 files in other folders)
