[package]
name = "railmap"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
itertools = "0.14.0"
geozero = { version = "0.14.0", features = ["with-gpx"] }
